// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarImage /> should display a skeleton when loading 1`] = `
.c2 {
  position: absolute;
  box-sizing: border-box;
  background-color: rgba(0, 0, 0, 0.12);
  border-radius: 50%;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.c2::after {
  position: absolute;
  display: block;
  content: " ";
  width: 100%;
  height: 100%;
  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
  animation: 1.4s linear 0s infinite normal none running FDoGs;
  transform: translateX(-100%);
  inset: 0px;
}

.c1 {
  min-width: 100%;
  min-height: 100%;
  width: 100%;
  height: 100%;
  padding: initial;
  box-sizing: border-box;
  position: relative;
}

.c0 {
  min-width: 2.5rem;
  width: 2.5rem;
  max-width: 2.5rem;
  min-height: 2.5rem;
  height: 2.5rem;
  max-height: 2.5rem;
  vertical-align: super;
  border-radius: 50%;
  box-shadow: none;
  margin: 0.5rem;
  background: #FEFEFE;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`<AvatarImage /> should merge user classes & spread custom props to the root node 1`] = `
.c0 {
  min-width: 2.5rem;
  width: 2.5rem;
  max-width: 2.5rem;
  min-height: 2.5rem;
  height: 2.5rem;
  max-height: 2.5rem;
  vertical-align: super;
  border-radius: 50%;
  box-shadow: none;
  margin: 0.5rem;
  background: #FEFEFE;
}

.c1 {
  width: 100%;
  height: 100%;
  opacity: 1;
  object-fit: cover;
  border-radius: 50%;
  overflow: hidden;
}

<div
  className="c0 my-avatar"
  data-my-prop="woofAvatar"
>
  <img
    alt=""
    className="c1"
    referrerPolicy="no-referrer"
    src="https://storage.googleapis.com/enishi-common/images/user/person_default_icon.png"
  />
</div>
`;

exports[`<AvatarImage /> should merge user classes & spread custom props to the root node 2`] = `
.c0 {
  min-width: 2.5rem;
  width: 2.5rem;
  max-width: 2.5rem;
  min-height: 2.5rem;
  height: 2.5rem;
  max-height: 2.5rem;
  vertical-align: super;
  border-radius: 50%;
  box-shadow: none;
  margin: 0.5rem;
  background: #FEFEFE;
}

.c1 {
  width: 100%;
  height: 100%;
  opacity: 1;
  object-fit: cover;
  border-radius: 50%;
  overflow: hidden;
}

<div
  className="c0 my-avatar"
  data-my-prop="woofAvatar"
>
  <img
    alt=""
    className="c1"
    referrerPolicy="no-referrer"
    src="https://storage.googleapis.com/enishi-common/images/user/person_default_icon.png"
  />
</div>
`;

exports[`<AvatarImage /> should render as a button when button 1`] = `
.c0 {
  min-width: 2.5rem;
  width: 2.5rem;
  max-width: 2.5rem;
  min-height: 2.5rem;
  height: 2.5rem;
  max-height: 2.5rem;
  vertical-align: super;
  border-radius: 50%;
  box-shadow: none;
  margin: 0.5rem;
  background: #FEFEFE;
}

.c1 {
  cursor: pointer;
  position: relative;
  box-sizing: border-box;
  background: #FEFEFE;
  border-radius: 50%;
  transition: all 0.300s cubic-bezier(0.0, 0, 0.2, 1);
}

.c1:hover {
  box-shadow: 0px 0px 4px 2px rgb(0 0 0/16%);
}

.c1:hover>:nth-child(2) {
  transform: scale(1.2);
  animation: jkNVfK 0.6s ease-in-out 1.6s infinite alternate;
  background-color: #1F4682;
}

.c3 {
  background-color: transparent;
  position: absolute;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  inset: 0;
  transition: transform 0.300s cubic-bezier(0.0, 0, 0.2, 1),background-color 0.300s cubic-bezier(0.0, 0, 0.2, 1);
  transform: scale(1.1);
  animation: none;
  z-index: -1;
}

.c2 {
  width: 100%;
  height: 100%;
  opacity: 1;
  object-fit: cover;
  border-radius: 50%;
  overflow: hidden;
}

<div
  className="c0 c1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  style={
    {
      "overflow": "hidden",
      "position": "relative",
      "verticalAlign": "top",
    }
  }
  tabIndex={0}
>
  <img
    alt=""
    className="c2"
    referrerPolicy="no-referrer"
    src="https://storage.googleapis.com/enishi-common/images/user/person_default_icon.png"
  />
  <div
    className="c3"
  />
</div>
`;
